--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "p2e"
 version = "0.1.0"
-authors = ["Marco Todorov <marcotodorov7@gmail.com> Nick Sydorenko"]
+authors = ["Marco Todorov <marcotodorov7@gmail.com> Nick Sydorenko <nicholassydorenko@gmail.com>"]
 edition = "2021"
 include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
 rust-version = "1.81"
